# types

./: README.md  pyproject.toml
telefone_types/: __init__.py  methods.py  objects.py  states.py
telefone_types/objects/: __init__.py  base.py  types.py
telefone_types/updates/: __init__.py  base.py  types.py
