[tool.poetry]
name = "telefone-types"
version = "6.0.0.11"
description = "Types for Telefone framework"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
