[tool.poetry]
name = "telefone-types"
version = "6.1.0.post5"
description = "Types for Telefone framework"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
